<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="400dp"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Extensions.CustomSpinnerSearchActivity">


    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/text_please_select"
        android:textColor="#000000"
        android:textSize="18sp" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitle"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_second_background"
        android:drawableEnd="@drawable/ic_search"
        android:hint="@string/search"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/data_not_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchText"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/text_data_not_found"
        android:textSize="@dimen/size_data_not_found"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/searchText"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="12dp"
        android:visibility="invisible"
        tools:itemCount="5"
        tools:listitem="@layout/custom_list_spinner" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/cancel"
            android:textColor="@color/colorGray"
            android:textSize="14sp" />

    </RelativeLayout>


</RelativeLayout>