<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:elevation="0dp"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardMaxElevation="0dp">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:minHeight="120dp"
            android:paddingVertical="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/messageNote"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/edittext_second_background"
                android:gravity="top"
                android:hint="@string/maintenance_note_detail"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/colorBlack"
                android:textSize="24sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLineGray" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_button_dialog_background"
                android:padding="15dp"
                android:text="@string/cancel"
                android:textColor="@color/colorRedDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorLineGray" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_button_dialog_background"
                android:padding="15dp"
                android:text="@string/ok"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/dialog_choice"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>