<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_root_page"
    android:orientation="vertical"
    android:id="@+id/rootLayout"
    tools:context=".QuestionActivity">

    <include layout="@layout/custom_top_bar" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="false"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="150dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/childLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/pageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/title_primary_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_qa" />


                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_q_a"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/size_top_title_all_activity"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_q_a_description"
                        android:textColor="@color/in_page_description_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_question"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/edittext_white_background"
                android:gravity="top"
                android:hint="@string/question_hint"
                android:imeOptions="actionDone"
                android:inputType="text|textMultiLine"
                android:padding="20dp"
                android:textColor="#000000"
                android:textColorHint="@color/colorGray"
                android:textSize="18sp" />


            <!--Button-->
            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_send"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_login_background"
                    android:text="@string/question_send"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--end Button-->

        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>